Multiple products list

--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 
     <br>
     <div class="container">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div id="content">
-                    <p>Name: <span id="p_name"></span></p>
-                    <p>Price: <span id="p_price"></span></p>
-                    <p>Category: <span id="p_category"></span></p>
-                </div>
-            </div>
+
+        <div class="list-group">
+            <button type="button" class="list-group-item">Name: <span class="name"></span></button>
+            <button type="button" class="list-group-item">Price: <span class="price"></span></button>
+            <button type="button" class="list-group-item">Category: <span class="category"></span></button>
         </div>
+
     </div>
 
 
