--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="fluid-container">
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="https://github.com/gustawdaniel/javascript_training">Javascript Example</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li id="nav-json"><a href="#">JSON</a></li>
+                    <li id="nav-login" class="active"><a href="#">Login</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+    </nav>
+</div>
+
     <br>
-    <div class="container" hidden>
+    <div id="con-json" class="container" hidden>
 
         <div class="list-group">
             <button type="button" class="list-group-item">Name: <span class="name"></span></button>
@@ -17,7 +43,7 @@
 
     </div>
 
-    <div class="container">
+    <div id="con-login" class="container">
         <br>
         <div class="row">
         <form class="col-sm-offset-3 col-sm-6">
