--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,8 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li id="nav-json"><a href="#">JSON</a></li>
-                    <li id="nav-login" class="active"><a href="#">Login</a></li>
+                    <li id="nav-login"><a href="#">Login</a></li>
+                    <li id="nav-words" class="active"><a href="#">Words</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
@@ -43,27 +44,48 @@
 
     </div>
 
-    <div id="con-login" class="container">
+    <div id="con-login" class="container" hidden>
         <br>
         <div class="row">
-        <form class="col-sm-offset-3 col-sm-6">
-            <div class="form-group">
-                <label for="name">Username</label>
-                <input id="name" type="text" class="form-control">
+            <div class="col-sm-offset-3 col-sm-6">
+                <form>
+                    <div class="form-group">
+                        <label for="name">Username</label>
+                        <input id="name" type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="pass">Password</label>
+                        <input id="pass" type="password" class="form-control">
+                    </div>
+                    <br>
+                    <input type="submit" class="btn btn-primary btn-block" value="Login">
+                </form>
+                <div id="login-error"></div>
             </div>
-            <div class="form-group">
-                <label for="pass">Password</label>
-                <input id="pass" type="password" class="form-control">
-            </div>
-            <br>
-            <input type="submit" class="btn btn-primary btn-block" value="Login">
-        </form>
         </div>
-
     </div>
 
+    <div id="con-words" class="container">
+        <div class="row">
+            <div class="col-sm-offset-3 col-sm-6">
+                <form>
+                    <div class="form-group">
+                        <label for="word">Word</label>
+                        <input id="word" type="text" class="form-control" placeholder="Type word and add or remove it from the following list...">
+                    </div>
+                    <input type="submit" class="btn btn-success btn-block" value="Add">
+                </form>
+                <br>
+                <ul class="list-group">
+                    <li class="list-group-item">Cras justo odio</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <script src="js/site.js"></script>
-
-
 </body>
 </html>
