Api cores poroblem resolved, full words service provided. Now you can: + add word + delete word

--- a/web/index.html
+++ b/web/index.html
@@ -71,14 +71,12 @@
                 <form>
                     <div class="form-group">
                         <label for="word">Word</label>
-                        <input id="word" type="text" class="form-control" placeholder="Type word and add or remove it from the following list...">
+                        <input id="word" name="word" type="text" class="form-control" placeholder="Type word and add or remove it from the following list...">
                     </div>
                     <input type="submit" class="btn btn-success btn-block" value="Add">
                 </form>
                 <br>
-                <ul class="list-group">
-                    <li class="list-group-item">Cras justo odio</li>
-                </ul>
+                <ul class="list-group"></ul>
             </div>
         </div>
     </div>
