--- a/web/index.html
+++ b/web/index.html
@@ -6,40 +6,39 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="fluid-container">
-    <!-- Static navbar -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="https://github.com/gustawdaniel/javascript_training">Javascript Example</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li id="nav-json"><a href="#">JSON</a></li>
-                    <li id="nav-login"><a href="#">Login</a></li>
-                    <li id="nav-words" class="active"><a href="#">Words</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
+
+
+<!--<div class="container-fluid">-->
+    <nav class="navbar navbar-full navbar-light bg-faded">
+        <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#navbar">
+             <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-toggleable-xs" id="navbar">
+            <ul class="nav navbar-nav">
+                <li class="nav-item" id="nav-json"><a class="nav-link" href="#">JSON</a></li>
+                <li class="nav-item" id="nav-login"><a class="nav-link" href="#">Login</a></li>
+                <li class="nav-item" id="nav-words"><a class="nav-link" href="#">Words</a></li>
+                <li class="nav-item active" id="nav-form"><a class="nav-link" href="#">Forms</a></li>
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+                <li><a class="nav-link" href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
+            </ul>
+        </div>
     </nav>
-</div>
+<!--</div>-->
+
+
 
     <br>
     <div id="con-json" class="container" hidden>
 
         <div class="list-group">
-            <button type="button" class="list-group-item">Name: <span class="name"></span></button>
-            <button type="button" class="list-group-item">Price: <span class="price"></span></button>
-            <button type="button" class="list-group-item">Category: <span class="category"></span></button>
+            <a type="button" class="list-group-item list-group-item-action">Name: <span class="name"></span></a>
+            <a type="button" class="list-group-item list-group-item-action">Price: <span class="price"></span></a>
+            <a type="button" class="list-group-item list-group-item-action">Category: <span class="category"></span></a>
         </div>
 
     </div>
@@ -47,7 +46,7 @@
     <div id="con-login" class="container" hidden>
         <br>
         <div class="row">
-            <div class="col-sm-offset-3 col-sm-6">
+            <div class="offset-sm-3 col-sm-6">
                 <form>
                     <div class="form-group">
                         <label for="name">Username</label>
@@ -65,9 +64,9 @@
         </div>
     </div>
 
-    <div id="con-words" class="container">
+    <div id="con-words" class="container" hidden>
         <div class="row">
-            <div class="col-sm-offset-3 col-sm-6">
+            <div class="offset-sm-3 col-sm-6">
                 <form>
                     <div class="form-group">
                         <label for="word">Word</label>
@@ -82,6 +81,16 @@
     </div>
 
 
+    <div id="con-form" class="container">
+        <div class="row">
+            <div class="offset-sm-3 col-sm-6">
+                <h4>Introduce <code>http://</code> and press <code>tab</code></h4>
+                <form class="form-group">
+                    <input type="text" class="form-control">
+                </form>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/site.js"></script>
