--- a/web/index.html
+++ b/web/index.html
@@ -2,49 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Json Data</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 
-<!--<div class="container-fluid">-->
-    <nav class="navbar navbar-full navbar-light bg-faded">
-        <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#navbar">
-             <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-        </button>
-        <div class="collapse navbar-toggleable-xs" id="navbar">
-            <ul class="nav navbar-nav">
-                <li class="nav-item" id="nav-json"><a class="nav-link" href="#">JSON</a></li>
-                <li class="nav-item" id="nav-login"><a class="nav-link" href="#">Login</a></li>
-                <li class="nav-item" id="nav-words"><a class="nav-link" href="#">Words</a></li>
-                <li class="nav-item active" id="nav-form"><a class="nav-link" href="#">Forms</a></li>
-            </ul>
-            <ul class="nav navbar-nav pull-right">
-                <li><a class="nav-link" href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
-            </ul>
-        </div>
-    </nav>
-<!--</div>-->
+<nav class="navbar navbar-full navbar-light">
+    <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#navbar">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+    </button>
+    <div class="collapse navbar-toggleable-xs" id="navbar">
+        <ul class="nav navbar-nav">
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-json">JSON</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-login">Login</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-words">Words</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-regexp">Regexp</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-counter">Counter</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-navigator">Navigator</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-multiply">Multiply</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-object">Object</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-ajax">Ajax</a></li>
+        </ul>
+        <ul class="nav navbar-nav pull-right">
+            <li><a class="nav-link" href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
+        </ul>
+    </div>
+</nav>
+<br>
 
+<div class="tab-content">
 
-
-    <br>
-    <div id="con-json" class="container" hidden>
-
+    <div id="con-json" class="container tab-pane">
         <div class="list-group">
             <a type="button" class="list-group-item list-group-item-action">Name: <span class="name"></span></a>
             <a type="button" class="list-group-item list-group-item-action">Price: <span class="price"></span></a>
             <a type="button" class="list-group-item list-group-item-action">Category: <span class="category"></span></a>
         </div>
-
     </div>
 
-    <div id="con-login" class="container" hidden>
-        <br>
+    <div id="con-login" class="container tab-pane">
         <div class="row">
             <div class="offset-sm-3 col-sm-6">
                 <form>
@@ -64,7 +65,7 @@
         </div>
     </div>
 
-    <div id="con-words" class="container" hidden>
+    <div id="con-words" class="container tab-pane">
         <div class="row">
             <div class="offset-sm-3 col-sm-6">
                 <form>
@@ -81,17 +82,56 @@
     </div>
 
 
-    <div id="con-form" class="container">
+    <div id="con-regexp" class="container tab-pane">
         <div class="row">
             <div class="offset-sm-3 col-sm-6">
-                <h4>Introduce <code>http://</code> and press <code>tab</code></h4>
+                <h4>Regexp</h4>
+                <br>
                 <form class="form-group">
                     <input type="text" class="form-control">
                 </form>
+                <progress class="progress" value="30" max="100"></progress>
+                <hr>
+                <pre>Code</pre>
+                <div class="alert" role="alert">
+                </div>
             </div>
         </div>
     </div>
 
+    <div id="con-counter" class="container tab-pane">
+        <div class="card">
+            <div class="card-block">
+                <div class="card-text">
+                    <p>Ala has a cat - the biggest cat in the world. Ala loves his cat, and cat loves Ala too. <3</p>
+                    <textarea class="form-control" rows="3"></textarea>
+                    <br>
+                    <button class="btn btn-info btn-block">Update paragraph</button>
+                </div>
+            </div>
+        </div>
+        <div class="list-group">
+        </div>
+        <a type="button" class="list-group-item list-group-item-action template"><span class="text"></span><span class="tag tag-pill pull-right"></span></a>
+    </div>
+
+    <div id="con-navigator" class="container tab-pane">
+        <div class="card">
+            <div class="card-block">
+                <div class="card-text">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="con-multiply" class="container tab-pane">
+    </div>
+
+    <div id="con-object" class="container tab-pane">
+    </div>
+
+    <div id="con-ajax" class="container tab-pane">
+    </div>
 
     <script src="js/site.js"></script>
 </body>
