Cookies added, documentation updated.
I was trying simplify setup in this commit.
Webserver and terminal commands are added to gulp, but
I have problem with setup servers in background.

--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-multiply">Multiply</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-object">Object</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-ajax">Ajax</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#con-cookie">Cookie</a></li>
         </ul>
         <ul class="nav navbar-nav pull-right">
             <li><a class="nav-link" href="http://gustawdaniel.pl/website">Author: Daniel Gustaw</a></li>
@@ -131,6 +132,16 @@
     </div>
 
     <div id="con-ajax" class="container tab-pane">
+    </div>
+
+    <div id="con-cookie" class="container tab-pane">
+        <div class="card">
+            <div class="card-block">
+                <p>To use cookies we need set it in PHP server. Server setting cookie is open on port 8040.</p>
+                <p>Check cookies in your development view in browser <a target="_blank" href="http://localhost:8040">http://localhost:8040</a></p>
+                <p>If server don't works look at <a target="_blank" href="https://github.com/gustawdaniel/javascript_training">docs</a>.</p>
+            </div>
+        </div>
     </div>
 
     <script src="js/site.js"></script>
