Changes made in training time

--- a/app/public/examples/28/start/index.html
+++ b/app/public/examples/28/start/index.html
@@ -1,3 +1,9 @@
+<style>
+    .rte p {
+        overflow: hidden;
+    }
+</style>
+
 <button id="start" class="button">Rozpocznij animację</button>
 <button id="stop" class="button">Zatrzymaj animację</button>
 
